[package]
name = "keybase-chat-notifier"
version = "0.1.0"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keybase-protocol = "0.1.1"
serde_json = "1"
notify-rust = "4.0.0-alpha.1"
structopt = "0.3"
