[package]
name = "keybase-chat-notifier"
version = "0.1.0"

description = "Produce system notification from keybase chat events"
readme = "README.md"

authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2018"

homepage = "https://github.com/jonhoo/keybase-chat-notifier"
repository = "https://github.com/jonhoo/keybase-chat-notifier.git"

keywords = ["keybase","cli","systray","notification"]
categories = ["command-line-utilities"]

license = "MIT/Apache-2.0"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
keybase-protocol = "0.2"
serde_json = "1"
notify-rust = "4.0.0-alpha.3"
structopt = "0.3"
